# lazy-state-machine

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
examples/: FSM_modulus_three.py  schrodingers_cat.py
lazy_state_machine/: exceptions.py  lazy_state_machine.py
tests/: test_invalid_inputs.py  test_modulus.py  test_turnstile.py
